# molihua

./: .gitignore  Makefile  README.md  TODO  combine-ribbons.cc  flip-orientation.awk  mgbs2obj.cc  molihua.scm  obj2stl.awk  run.scm  scale-obj.awk
extra/: bernsteinizer.mac  blend.html  blend.wxm  direction-blend-twists.lyx
viewer/: .gitignore  CMakeLists.txt  base-mesh.hh  domain-window.cc  domain-window.hh  main.cc  object.cc  object.hh  options.cc  options.hh  ph-gb.cc  ph-gb.hh  scheme-wrapper.cc  scheme-wrapper.hh  triangulator.cc  triangulator.hh  viewer.cc  viewer.hh  visualization.cc  visualization.hh  window.cc  window.hh
viewer/cmake/: FindCDGBS.cmake  FindTriangle.cmake
viewer/debug/: asan.supp  runme
